Add Initial Planning Application

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,8 +4,17 @@
   },
   
   "PhotoSettings": {
-    "MaxBytes": 10485760,
-    "AcceptedFileTypes": [".jpg", ".jpeg", ".png"]
+    "MaxBytes": 1000000000,
+    "AcceptedFileTypes": [".jpg", ".jpeg", ".png", ".pdf"]
+  },
+
+  "StateStatusSettings": {
+    "STATE_ON_TIME": "OnTime",
+    "STATE_DUE" : "Due",
+    "STATE_OVERDUE" : "Overdue",
+    "STATE_COMPLETE" : "Complete",
+    "STATE_OVERRUN" : "Overrun",
+    "STATE_ERROR" : "ERROR"
   },
   
   "Logging": {
