Add Planning Resources

--- a/appsettings.json
+++ b/appsettings.json
@@ -3,6 +3,15 @@
     "Default": "server=localhost; database=vega; user id=sa; password=MyComplexPassword!1234"
   },
 
+  "DateSettings": {
+    "CurrentDate": "16/06/2018"
+  },
+
+  "DateFormatSetting": {
+    "DateFormat": "dd-MM-yyyy"
+  },
+
+
   "PhotoSettings": {
     "MaxBytes": 1000000000,
     "AcceptedFileTypes": [".jpg", ".jpeg", ".png", ".pdf"]
