Dynamically create status for user

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,7 +4,7 @@
   },
 
   "DateSettings": {
-    "CurrentDate": "16/06/2018"
+    "CurrentDateOverride": "20-02-2019"
   },
 
   "DateFormatSetting": {
