Select Planning Apps By Status

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,7 +4,7 @@
   },
 
   "DateSettings": {
-    "CurrentDateOverride": "17-03-2019"
+    "CurrentDateOverride": "31-03-2019"
   },
 
   "DateFormatSetting": {
@@ -14,7 +14,7 @@
 
   "PhotoSettings": {
     "MaxBytes": 1000000000,
-    "AcceptedFileTypes": [".jpg", ".jpeg", ".png", ".pdf"]
+    "AcceptedFileTypes": [".jpg", ".jpeg", ".png"]
   },
 
   "StateStatusSettings": {
