--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -2,18 +2,19 @@
   "ConnectionStrings": {
     "Default": "server=localhost; database=vega; user id=sa; password=MyComplexPassword!1234"
   },
-  
+
   "DateSettings": {
-    "CurrentDate": "16/06/2018"
+    "CurrentDateOverride": "28-11-2018"
   },
 
   "DateFormatSetting": {
     "DateFormat": "dd-MM-yyyy"
   },
 
+
   "PhotoSettings": {
     "MaxBytes": 1000000000,
-    "AcceptedFileTypes": [".jpg", ".jpeg", ".png", ".pdf"]
+    "AcceptedFileTypes": [".jpg", ".jpeg", ".png"]
   },
 
   "StateStatusSettings": {
@@ -24,12 +25,10 @@
     "STATE_OVERRUN" : "Overrun",
     "STATE_ERROR" : "ERROR"
   },
-  
+
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Warning"
     }
   }
 }
