Add Generator for Planning App

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "awesome-typescript-loader": "3.2.1",
     "bootstrap": "3.3.7",
     "chai": "4.0.2",
-    "css": "2.2.1",
+    "css": "^2.2.3",
     "css-loader": "0.28.4",
     "es6-shim": "0.35.3",
     "event-source-polyfill": "0.0.9",
