--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "bootstrap": "^3.3.7",
     "css": "2.2.3",
     "font-awesome": "^4.7.0",
+    "http-status-codes": "^1.3.0",
     "moment": "^2.22.2",
     "ng2-toasty": "^4.0.3",
     "ngx-bootstrap": "^3.0.1",
