Add App Security using JWT

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -3,8 +3,17 @@
     "Default": "server=localhost; database=vega; user id=sa; password=MyComplexPassword!1234"
   },
 
+  "JwtIssuerOptions": {
+    "Issuer": "VegaPlannerApi",
+    "Audience": "http://localhost:5000/"
+  },
+  "FacebookAuthSettings": {
+    "AppId": "1528751870549294",
+    "AppSecret": "bed77aaafe5c57fc8656c0a1e2533760"
+  },
+
   "DateSettings": {
-    "CurrentDateOverride": "21-02-2019"
+    "CurrentDateOverride": "04-04-2019"
   },
 
   "DateFormatSetting": {
