--- a/appsettings.json
+++ b/appsettings.json
@@ -3,6 +3,15 @@
     "Default": "server=localhost; database=vega; user id=sa; password=MyComplexPassword!1234"
   },
 
+  "JwtIssuerOptions": {
+    "Issuer": "webApi",
+    "Audience": "http://localhost:5000/"
+  },
+  "FacebookAuthSettings": {
+    "AppId": "1528751870549294",
+    "AppSecret": "bed77aaafe5c57fc8656c0a1e2533760"
+  },
+
   "DateSettings": {
     "CurrentDateOverride": "27-11-2018"
   },
