--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   },
   "dependencies": {
     "@types/underscore": "^1.8.8",
+    "angular-webstorage-service": "^1.0.2",
     "bootstrap": "^3.3.7",
     "css": "2.2.3",
     "font-awesome": "^4.7.0",
