--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "@angular/animations": "^5.2.11",
+    "@angular/cli": "^6.2.3",
     "@angular/common": "^5.2.11",
     "@angular/compiler": "^5.2.11",
     "@angular/compiler-cli": "^5.2.11",
@@ -17,7 +18,7 @@
     "@angular/platform-browser-dynamic": "^5.2.11",
     "@angular/platform-server": "^5.2.11",
     "@angular/router": "^5.2.11",
-    "@ngtools/webpack": "^6.1.4",
+    "@ngtools/webpack": "^1.10.2",
     "@types/chai": "4.0.1",
     "@types/jasmine": "2.5.53",
     "@types/webpack-env": "1.13.0",
@@ -70,7 +71,6 @@
     "ng2-toasty": "^4.0.3",
     "ngx-bootstrap": "^3.0.1",
     "ngx-webstorage": "^2.0.1",
-    "popper.js": "^1.14.4",
-    "webpack": "^2.5.1"
+    "popper.js": "^1.14.4"
   }
 }
