Add Production Environment

--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -13,7 +13,7 @@
   },
 
   "DateSettings": {
-    "CurrentDateOverride": "04-02-2020"
+    "CurrentDateOverride": ""
   },
 
   "DateFormatSetting": {
