--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "ng2-toasty": "^4.0.3",
     "ngx-bootstrap": "^3.0.1",
     "ngx-webstorage": "^2.0.1",
-    "popper.js": "^1.14.4"
+    "popper.js": "^1.14.4",
+    "webpack": "^2.5.1",
+    "webpack-cli": "^3.1.2"
   }
 }
